--- a/assets/styles/section.css
+++ b/assets/styles/section.css
@@ -3,10 +3,42 @@ section {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+	flex-direction: column;
 }
 
 .section.-hero {
+	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	background-image: url(../img/hero-bg.png);
+}
+
+.hero__left {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	min-width: 200px;
+}
+
+.scroll-down {
+	text-align: center;
+	color: var(--c-white);
+	text-transform: uppercase;
+	font-family: 'Open Sans', bold;
+	display: flex;
+	min-height: 60px;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	padding-bottom: 10px;
+}
+
+.scroll-down:after {
+	content: "";
+	width: 15px;
+	height: 15px;
+	background-color: transparent;
+	border-left: 2px solid var(--c-white);
+	border-bottom: 2px solid var(--c-white);
+	transform: rotate(-45deg);
 }
