--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -4,13 +4,55 @@
 	align-items: center;
 }
 
-.logo {
-	width: 50px;
-	height: 50px;
+.header__logo {
+	width: 70px;
+	height: 70px;
+}
+
+.burger {
+	display: none;
 }
 
 .header__partners {
 	display: flex;
 	justify-content: space-between;
 	min-width: 150px;
+}
+
+@media screen and (max-width: 767px) {
+	.header__partner {
+		display: none;
+	}
+
+	.header__logo {
+		max-width: 50px;
+		max-height: 50px;
+	}
+
+	.burger {
+		display: block;
+		width: 25px;
+		height: 2px;
+		background-color: var(--c-white);
+		position: relative;
+	}
+
+	.burger:before {
+		content: "";
+		position: absolute;
+		width: 25px;
+		height: 2px;
+		background-color: var(--c-white);
+		bottom: -11px;
+	}
+
+	.burger:after {
+		content: "";
+		position: absolute;
+		width: 15px;
+		height: 2px;
+		background-color: var(--c-white);
+		bottom: -22px;
+		right: 0px;
+	}
 }
