--- a/assets/styles/typography.css
+++ b/assets/styles/typography.css
@@ -10,6 +10,7 @@
 	font-size: 24px;
 	color: var(--c-white);
 	font-family: 'Open Sans', cursive;
+	margin: 0;
 }
 
 .subtitle, .title {
@@ -18,6 +19,25 @@
 
 h1 {
 	margin: 0 auto;
+}
+
+.subtitle.-about {
+	text-transform: uppercase;
+	text-align: left;
+	font-weight: lighter;
+}
+
+.title.-about {
+	text-transform: uppercase;
+	margin: 0px;
+	text-align: left;
+	font-weight: lighter;
+}
+
+.about__body {
+	color: var(--c-white);
+	font-family: 'Open Sans', cursive;
+
 }
 
 .lang {
@@ -46,4 +66,24 @@ h1 {
 	transform: rotate(-45deg);
 	left: 46px;
 	top: 5px;
+}
+
+@media screen and (max-width: 767px) {
+	.title {
+		font-size: 50px;
+	}
+
+	.subtitle {
+		font-size: 14px;
+	}
+}
+
+@media screen and (max-width: 352px) {
+	.title {
+		font-size: 35px;
+	}
+
+	.subtitle {
+		font-size: 12px;
+	}
 }
