--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -5,4 +5,5 @@
  	--c-yellow-gradient: linear-gradient(100deg, #FFB548, #F3AF3A); 
  	--c-gray-dark: #979797; 
  	--c-gray-light: rgba(255, 255, 255, 0.5);
+ 	--c-orange:#FFB548;
 }
