--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -1,13 +1,38 @@
 .about__header {
-	text-align: left;
-	border-bottom: 2px solid white;
+	border-bottom: 2px solid var(--c-white);
 }
 
-.about__body {
-	max-width: 350px;
-	text-align: left;
+.about__info {
+	max-width: 400px;
 }
 
 .about__left {
-	max-width: 500px;
+	margin-right: 30px;
+}
+
+.about__body {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.about__border {
+	position: relative;
+	z-index: 2;
+}
+
+.about__border:after {
+	content: "";
+	background-color: var(--c-orange);
+	width: 129px;
+	height: 10px;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	z-index: -1;
+}
+
+@media screen and (max-width: 1064px) {
+	.about__border:after {
+		display: none;
+	}
 }
