--- a/assets/styles/container.css
+++ b/assets/styles/container.css
@@ -3,11 +3,6 @@
 	width: 1200px;
 }
 
-.container.-about {
-	display: flex;
-	justify-content: space-between;
-}
-
 @media screen and (max-width: 1239px) {
 	.container {
 		width: 1024px;
@@ -29,5 +24,22 @@
 @media screen and (max-width: 767px) {
 	.container {
 		width: 100%;
+	}
+}
+
+@media screen and (max-width: 786px) {
+	.container.-about {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		padding: 50px 0 50px 0;
+		height: 924px;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.container.-about {
+		height: 1024px;
 	}
 }
