--- a/assets/styles/button.css
+++ b/assets/styles/button.css
@@ -1,8 +1,3 @@
-.header__partner {
-	border: none;
-	background-color: transparent;
-}
-
 .btn {
 	margin-left: auto;
 	margin-right: auto;
@@ -18,6 +13,10 @@
 	font-weight: bolder;
 	border: none;
 	border-radius: 5px;
+}
+
+.btn.-hero {
+	margin-top: 20px;
 }
 
 .btn.-quotes {
